PanelForce/force-app/main/default/force-app/main/default/objects/Training_Center__c/Training_Center__c.object-meta.xml
<CustomObject>
    <label>Training Center</label>
    <nameField>
        <label>Training Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>