PanelForce/force-app/main/default/force-app/main/default/objects/Training_Center__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>